fixing layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -3073,7 +3073,11 @@ h6 {
   /* Contact Page Area css
   ============================================================================================ */
   .contact_info {
-    margin-bottom: 50px; }
+    background: #f9f9ff;
+      padding: 30px;
+      border-radius: 5px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    }
 
   /* End Contact page Area css
   ============================================================================================ */
@@ -3338,7 +3342,4 @@ h6 {
       color: #854fee; }
 
 /* End Footer Area css
-============================================================================================ */
-/*---------------------------------------------------- */
-
-/*# sourceMappingURL=style.css.map */
+============================================================================================*/
